<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </android.support.v7.widget.Toolbar>

    </FrameLayout>

    <LinearLayout
        android:layout_width="240sp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="#dcdee0">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CeBianLan_title"
            android:maxLines="1"
            android:textColor="#171c21"
            android:layout_marginTop="30sp"
            android:textSize="33sp"
            android:gravity="center_horizontal"/>
        <CheckBox
            android:id="@+id/MeiWen"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_MeiWen"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/ZeXue"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_ZeXue"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/KeHuan"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_KeHuan"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/TuiLi"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_TuiLi"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/JiShi"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_JiShi"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/JiTang"
            style="@style/check_box"
            android:layout_marginLeft="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/LableText_JiTang"
            android:paddingLeft="120sp"
            android:textColor="#171c21"
            android:maxLines="1"
            android:textSize="33sp" />

        <CheckBox
            android:id="@+id/GuWen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_marginLeft="20sp"
            android:textColor="#171c21"
            android:paddingLeft="120sp"
            style="@style/check_box"
            android:text="@string/LableText_GuWen"
            android:layout_marginBottom="50sp"/>
    </LinearLayout>



</android.support.v4.widget.DrawerLayout>

